# zod-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: axum_usage.rs  basic_usage.rs  derive_schema.rs  i18n_usage.rs  struct_validation.rs  validator_replacement.rs  zod_ts.rs
zod-rs/: Cargo.toml
zod-rs-macros/: Cargo.toml
zod-rs-macros/src/: lib.rs
zod-rs-ts/: Cargo.toml
zod-rs-ts/src/: lib.rs
zod-rs-util/: Cargo.toml
zod-rs-util/src/: lib.rs
zod-rs-util/src/error/: issue.rs  mod.rs  result.rs
zod-rs-util/src/locales/: ar.rs  en.rs  fr.rs  mod.rs
zod-rs-web/: astro.config.mjs  package-lock.json  package.json
zod-rs-web/src/content/docs/: getting-started.md  index.mdx
zod-rs-web/src/content/docs/advanced/: error-handling.md  i18n.md  schema-composition.md
zod-rs-web/src/content/docs/comparison/: vs-validator.md
zod-rs-web/src/content/docs/complex-types/: array.md  object.md  optional.md  tuple.md  union.md
zod-rs-web/src/content/docs/derive-macros/: attributes.md  nested-structs.md  zod-schema.md
zod-rs-web/src/content/docs/enums/: json-format.md  overview.md
zod-rs-web/src/content/docs/integrations/: axum.md
zod-rs-web/src/content/docs/primitives/: boolean.md  literal.md  null.md  number.md  string.md
zod-rs-web/src/content/docs/typescript-codegen/: cli.md  enum-codegen.md  zod-ts.md
zod-rs-web/src/styles/: custom.css
zod-rs/src/: lib.rs
zod-rs/src/schema/: array.rs  boolean.rs  literal.rs  mod.rs  null.rs  number.rs  object.rs  optional.rs  string.rs  tuple.rs  union.rs
