[workspace]
resolver = "2"
members = ["zod-rs", "zod-rs-util", "zod-rs-macros"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Maulana Sodiqin <maulanasdqn@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maulanasdqn/zod-rs"
description = "A Rust implementation inspired by Zod for schema validation"
keywords = ["validation", "schema", "zod", "type-safety"]
categories = ["data-structures", "parser-implementations"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
regex = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
